--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <body>
     <h1>Welcome to My Git Project</h1>
     <p>This is a simple HTML page to practice Git and VSCode!</p>
+    <p>Gitのバージョン管理のために1行追加してみたよ。</p>
 </body>
 </html>
