update:index.htmlに挨拶1文を追加

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <h1>Welcome to My Git Project</h1>
     <p>This is a simple HTML page to practice Git and VSCode!</p>
     <p>Gitのバージョン管理のために1行追加してみたよ。</p>
+    <p>今日もよろしくお願いします</p>
 </body>
 </html>
