uptate:index.htmlにさらに1行追加

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <p>This is a simple HTML page to practice Git and VSCode!</p>
     <p>Gitのバージョン管理のために1行追加してみたよ。</p>
     <p>今日もよろしくお願いします</p>
+    <p>リモートリポジトリにも変更反映できるかな？</p>
 </body>
 </html>
