upddte :index.htmlさらに変更加えてみた

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <p>Gitのバージョン管理のために1行追加してみたよ。</p>
     <p>今日もよろしくお願いします</p>
     <p>リモートリポジトリにも変更反映できるかな？</p>
+    <p>もっかい変更加えちゃうぞ</p>
 </body>
 </html>
